fix(Hero): #869445r4m: fix viewport height on mobile

--- a/components/Hero/Hero.scss
+++ b/components/Hero/Hero.scss
@@ -4,7 +4,7 @@
   &__background {
     position: absolute;
     width: 100%;
-    height: 100dvh;
+    height: 100svh;
 
     img {
       background-size: cover;
@@ -21,7 +21,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    height: 100dvh;
+    height: 100svh;
 
     @include tablet {
       height: 100vh;
